day9-ecs-terraform/infra/ecs.tf
# ecs clsuter

resource "aws_ecs_cluster" "ecs_cluster" {
  name = var.ecs_cluster_name

  #   setting {
  #     name  = "containerInsights"
  #     value = "disabled"
  #   }
}

# ecs task definition
resource "aws_ecs_task_definition" "service" {
  family                   = "2tier-service"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = 1024
  memory                   = 2048

  container_definitions = jsonencode([
    {
      name      = var.container_name
      image     = var.app_image
      essential = true
      environment = [
        {
          name  = "DB_LINK"
          value = aws_secretsmanager_secret_version.rds_password.secret_string
        }
      ]
      portMappings = [
        {
          containerPort = var.port
          hostPort      = var.port
          protocol      = "tcp"
        }
      ]
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          awslogs-group         = "/ecs/${var.ecs_task_def}"
          awslogs-region        = var.aws_region
          awslogs-stream-prefix = "ecs"
        }
      }
    }
  ])

  execution_role_arn = aws_iam_role.ecs_task_execution_role.arn
}


# ecs service
resource "aws_ecs_service" "app_service" {
  name            = var.ecs_service
  cluster         = aws_ecs_cluster.ecs_cluster.id
  desired_count   = 2
  launch_type     = "FARGATE"
  task_definition = aws_ecs_task_definition.service.arn

  load_balancer {
    target_group_arn = aws_alb_target_group.name.arn
    container_name   = var.container_name
    container_port   = var.port
  }

  network_configuration {
    subnets          = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]
    security_groups  = [aws_security_group.ecs_sg.id]
    assign_public_ip = false
  }

  depends_on = [aws_alb_listener.http]
}


# auto scaling policy for ecs service

# target scaling policy for ecs service

resource "aws_appautoscaling_target" "ecs" {
  max_capacity       = 4
  min_capacity       = 1
  # resource_id        = "service/${var.ecs_cluster_name}/${var.ecs_service}"
  resource_id        = "service/${aws_ecs_cluster.ecs_cluster.name}/${aws_ecs_service.app_service.name}"
  scalable_dimension = "ecs:service:DesiredCount"
  service_namespace  = "ecs"
}

resource "aws_appautoscaling_policy" "cpu" {
  name               = "cpu-tracking"
  policy_type        = "TargetTrackingScaling"
  resource_id        = aws_appautoscaling_target.ecs.resource_id
  scalable_dimension = aws_appautoscaling_target.ecs.scalable_dimension
  service_namespace  = aws_appautoscaling_target.ecs.service_namespace

  target_tracking_scaling_policy_configuration {
    predefined_metric_specification {
      predefined_metric_type = "ECSServiceAverageCPUUtilization"
    }
    target_value       = 60.0
    scale_in_cooldown  = 300
    scale_out_cooldown = 60
  }
}

# step scaling policy for ecs service

resource "aws_appautoscaling_policy" "memory" {
  name               = "memory-tracking"
  policy_type        = "StepScaling"
  resource_id        = aws_appautoscaling_target.ecs.resource_id
  scalable_dimension = aws_appautoscaling_target.ecs.scalable_dimension
  service_namespace  = aws_appautoscaling_target.ecs.service_namespace

  step_scaling_policy_configuration {
    step_adjustment {
      scaling_adjustment = 1
      metric_interval_lower_bound = 0
      metric_interval_upper_bound = 10
    }
  }
}

# custom metric scaling policy for ecs service
